# rust-embed-resource

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  appveyor.yml  crates.js  gh_rsa.enc  rust-embed-resource.sublime-project  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  msvc.yml
.github/workflows/msvc/: Cargo.toml  build.rs  target  test.py  version.rc
cc/: all.html  index.html  sidebar-items.js  struct.Build.html  struct.Error.html  struct.Tool.html
cc/windows_registry/: enum.VsVers.html  fn.find.html  fn.find_tool.html  fn.find_vs_version.html  index.html  sidebar-items.js
embed_resource/: all.html  fn.compile.html  fn.find_windows_sdk_tool.html  index.html  sidebar-items.js
example/version/: Cargo.toml  build.rs  test.py  version.rc
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  main.rs  non_windows.rs  windows_msvc.rs  windows_not_msvc.rs
src/cc/: lib.rs.html  windows_registry.rs.html
src/embed_resource/: lib.rs.html  non_windows.rs.html
src/embed_resource/src/: lib.rs.html  non_windows.rs.html
